--- a/login.html
+++ b/login.html
@@ -52,40 +52,21 @@
                 <label for="clave" class="form-label">Contraseña</label>
                 <input type="password" id="clave" class="form-control" placeholder="Ej: clinica123" required>
             </div>
-            <div id="loginAlerta" class="text-center text-danger mb-2"></div>
+            <div id="loginAlerta" class="text-center text-danger mb-2" aria-live="polite"></div>
             <div class="text-center">
-                <button type="submit" class="btn btn-sm-primary w-100">Ingresar</button>
+                <button type="submit" class="btn btn-primary btn-sm w-100">Ingresar</button>
             </div>
         </form>
     </div>
 
-    <script>
-        const USUARIO_ADMIN = {
-            usuario: "admin",
-            clave: "clinica123"
-        };
+    
 
-        const formLogin = document.getElementById('formLogin');
-        const alerta = document.getElementById('loginAlerta');
-
-        formLogin.addEventListener('submit', function (e) {
-            e.preventDefault();
-            const usuario = document.getElementById('usuario').value.trim();
-            const clave = document.getElementById('clave').value.trim();
-
-            if (usuario === USUARIO_ADMIN.usuario && clave === USUARIO_ADMIN.clave) {
-                localStorage.setItem("logueado", "true");
-                window.location.href = "altaMedicos.html";
-            } else {
-                alerta.textContent = " Usuario o contraseña incorrectos.";
-            }
-        });
-    </script>
 
 </main>
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/login.js"></script>
 <script src="js/app.js"></script>
 
 </body>
