--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <a href="contacto.html" class="nav-link">Contacto</a>
       <a href="altaMedicos.html" class="nav-link">Alta de Médicos</a>
     <a href="reservarTurno.html" class="nav-link">Reservar Turno</a>
+    <a id="navLoginBtn" href="login.html" class="btn btn-outline-light btn-sm">Iniciar Sesión</a>
     </nav>
   </div>
 </header>
@@ -135,6 +136,59 @@
 <!-- App JS -->
 <script type="module" src="js/catalogoProfesionales.js"></script>
 <script type="module" src="js/app.js"></script>
+<!-- Actualiza la visibilidad del nav -->
+<script>
+  (function(){
+    function getRole(){
+      return sessionStorage.getItem('userRole') || localStorage.getItem('userRole');
+    }
+
+    function isLogged(){
+      return !!(sessionStorage.getItem('username') || localStorage.getItem('logueado'));
+    }
+
+    const altaLink = document.querySelector('a[href="altaMedicos.html"]');
+    const reservarLink = document.querySelector('a[href="reservarTurno.html"]');
+    const navLoginBtn = document.getElementById('navLoginBtn');
+
+    function refreshNav(){
+      const role = getRole();
+      const logged = isLogged();
+
+      // Alta de Medicos: Solo administradores
+      if (altaLink) altaLink.style.display = (role === 'admin') ? '' : 'none';
+      // Reservar Turno: Solo usuarios autenticados
+      if (reservarLink) reservarLink.style.display = logged ? '' : 'none';
+
+      if (navLoginBtn){
+        if (logged){
+          navLoginBtn.textContent = 'Hola, ' + (sessionStorage.getItem('username') || 'Usuario');
+          navLoginBtn.classList.remove('btn-outline-light');
+          navLoginBtn.classList.add('btn-success');
+          navLoginBtn.removeAttribute('href');
+          navLoginBtn.onclick = function(){
+            // logout
+            sessionStorage.clear();
+            localStorage.removeItem('logueado');
+            localStorage.removeItem('userRole');
+            window.location.reload();
+          };
+        } else {
+          navLoginBtn.textContent = 'Iniciar Sesión';
+          navLoginBtn.classList.remove('btn-success');
+          navLoginBtn.classList.add('btn-outline-light');
+            // asegura que enlace a la página de inicio de sesión independiente
+            navLoginBtn.setAttribute('href', 'login.html');
+            navLoginBtn.onclick = null;
+          }
+          }
+        }
+
+        document.addEventListener('DOMContentLoaded', refreshNav);
+        // También actualiza cuando cambia el almacenamiento (otras pestañas)
+        window.addEventListener('storage', refreshNav);
+        })();
+      </script>
 
 
 </body>
