--- a/contacto.html
+++ b/contacto.html
@@ -30,6 +30,9 @@
       <button id="darkModeToggle" class="btn btn-outline-light btn-sm" type="button" title="Cambiar modo oscuro">
         <i class="bi bi-moon-fill" id="darkModeIcon"></i>
       </button>
+      <!-- Botón login/logout visible en desktop -->
+      <a id="navLoginBtn" href="login.html" class="btn btn-outline-light btn-sm d-none d-lg-inline-block">Iniciar Sesión</a>
+      <!-- Toggler (móvil) -->
       <button class="navbar-toggler navbar-dark d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -42,6 +45,9 @@
       <a href="contacto.html" class="nav-link">Contacto</a>
       <a href="altaMedicos.html" class="nav-link">Alta de Médicos</a>
       <a href="reservarTurno.html" class="nav-link">Reservar Turno</a>
+      <div class="d-lg-none w-100 mt-2">
+        <a id="navLoginBtnMobile" href="login.html" class="btn btn-outline-light btn-sm w-100">Iniciar Sesión</a>
+      </div>
   </nav>
   </div>
 </header>
