--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       <button id="darkModeToggle" class="btn btn-outline-light btn-sm" type="button" title="Cambiar modo oscuro">
         <i class="bi bi-moon-fill" id="darkModeIcon"></i>
       </button>
+      <!-- Botón login/logout visible en desktop -->
+      <a id="navLoginBtn" href="login.html" class="btn btn-outline-light btn-sm d-none d-lg-inline-block">Iniciar Sesión</a>
+      <!-- Toggler (móvil) -->
       <button class="navbar-toggler navbar-dark d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -37,8 +40,11 @@
       <a href="institucional.html" class="nav-link">Institucional</a>
       <a href="contacto.html" class="nav-link">Contacto</a>
       <a href="altaMedicos.html" class="nav-link">Alta de Médicos</a>
-    <a href="reservarTurno.html" class="nav-link">Reservar Turno</a>
-    <a id="navLoginBtn" href="login.html" class="btn btn-outline-light btn-sm">Iniciar Sesión</a>
+      <a href="reservarTurno.html" class="nav-link">Reservar Turno</a>
+      <!-- Botón login (móvil) dentro del collapse -->
+      <div class="d-lg-none w-100 mt-2">
+        <a id="navLoginBtnMobile" href="login.html" class="btn btn-outline-light btn-sm w-100">Iniciar Sesión</a>
+      </div>
     </nav>
   </div>
 </header>
@@ -136,59 +142,7 @@
 <!-- App JS -->
 <script type="module" src="js/catalogoProfesionales.js"></script>
 <script type="module" src="js/app.js"></script>
-<!-- Actualiza la visibilidad del nav -->
-<script>
-  (function(){
-    function getRole(){
-      return sessionStorage.getItem('userRole') || localStorage.getItem('userRole');
-    }
-
-    function isLogged(){
-      return !!(sessionStorage.getItem('username') || localStorage.getItem('logueado'));
-    }
-
-    const altaLink = document.querySelector('a[href="altaMedicos.html"]');
-    const reservarLink = document.querySelector('a[href="reservarTurno.html"]');
-    const navLoginBtn = document.getElementById('navLoginBtn');
-
-    function refreshNav(){
-      const role = getRole();
-      const logged = isLogged();
-
-      // Alta de Medicos: Solo administradores
-      if (altaLink) altaLink.style.display = (role === 'admin') ? '' : 'none';
-      // Reservar Turno: Solo usuarios autenticados
-      if (reservarLink) reservarLink.style.display = logged ? '' : 'none';
-
-      if (navLoginBtn){
-        if (logged){
-          navLoginBtn.textContent = 'Hola, ' + (sessionStorage.getItem('username') || 'Usuario');
-          navLoginBtn.classList.remove('btn-outline-light');
-          navLoginBtn.classList.add('btn-success');
-          navLoginBtn.removeAttribute('href');
-          navLoginBtn.onclick = function(){
-            // logout
-            sessionStorage.clear();
-            localStorage.removeItem('logueado');
-            localStorage.removeItem('userRole');
-            window.location.reload();
-          };
-        } else {
-          navLoginBtn.textContent = 'Iniciar Sesión';
-          navLoginBtn.classList.remove('btn-success');
-          navLoginBtn.classList.add('btn-outline-light');
-            // asegura que enlace a la página de inicio de sesión independiente
-            navLoginBtn.setAttribute('href', 'login.html');
-            navLoginBtn.onclick = null;
-          }
-          }
-        }
-
-        document.addEventListener('DOMContentLoaded', refreshNav);
-        // También actualiza cuando cambia el almacenamiento (otras pestañas)
-        window.addEventListener('storage', refreshNav);
-        })();
-      </script>
+<!-- (La visibilidad del nav se maneja desde js/app.js para aplicar en todas las páginas) -->
 
 
 </body>
