--- a/reservarTurno.html
+++ b/reservarTurno.html
@@ -24,6 +24,8 @@
                     title="Cambiar modo oscuro">
                     <i class="bi bi-moon-fill" id="darkModeIcon"></i>
                 </button>
+                <!-- Botón login/logout visible en desktop -->
+                <a id="navLoginBtn" href="login.html" class="btn btn-outline-light btn-sm d-none d-lg-inline-block">Iniciar Sesión</a>
                 <button class="navbar-toggler navbar-dark d-lg-none" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
@@ -35,8 +37,11 @@
                 <a href="index.html" class="nav-link">Inicio</a>
                 <a href="institucional.html" class="nav-link">Institucional</a>
                 <a href="contacto.html" class="nav-link">Contacto</a>
-                <a href="altaMedicos.html" class="nav-link">Alta de Médicos</a>
-                <a href="reservarTurno.html" class="nav-link">Reservar Turno</a>
+                                <a href="altaMedicos.html" class="nav-link">Alta de Médicos</a>
+                                <a href="reservarTurno.html" class="nav-link">Reservar Turno</a>
+                                                                <div class="d-lg-none w-100 mt-2">
+                                                                    <a id="navLoginBtnMobile" href="login.html" class="btn btn-outline-light btn-sm w-100">Iniciar Sesión</a>
+                                                                </div>
             </nav>
         </div>
     </header>
