--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
       <a href="contacto.html" class="nav-link">Contacto</a>
       <a href="altaMedicos.html" class="nav-link">Alta de Médicos</a>
       <a href="reservarTurno.html" class="nav-link">Reservar Turno</a>
+      <a href="reservarTurnoSinLogin.html" class="nav-link">Reservar Turno </a>
+
      
       <!-- Botón login (móvil) dentro del collapse -->
       <div class="d-lg-none w-100 mt-2">
