--- a/contacto.html
+++ b/contacto.html
@@ -45,6 +45,8 @@
       <a href="contacto.html" class="nav-link">Contacto</a>
       <a href="altaMedicos.html" class="nav-link">Alta de Médicos</a>
       <a href="reservarTurno.html" class="nav-link">Reservar Turno</a>
+      <a href="reservarTurnoSinLogin.html" class="nav-link">Reservar Turno</a>
+
       <div class="d-lg-none w-100 mt-2">
         <a id="navLoginBtnMobile" href="login.html" class="btn btn-outline-light btn-sm w-100">Iniciar Sesión</a>
       </div>
