--- a/contacto.html
+++ b/contacto.html
@@ -44,7 +44,7 @@
       <a href="institucional.html" class="nav-link">Institucional</a>
       <a href="contacto.html" class="nav-link">Contacto</a>
       <a href="altaMedicos.html" class="nav-link">Alta de Médicos</a>
-      <a href="reservarTurno.html" class="nav-link">Reservar Turno</a>
+      <a href="reservarTurnoSinLogin.html" class="nav-link">Reservar Turno</a>
      
 
       <div class="d-lg-none w-100 mt-2">
