--- a/reservarTurno.html
+++ b/reservarTurno.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="CSS/styles.css">
 </head>
 
+ <!-- Verifica Login --> <script src="./JS/verificarLogin.js"></script>
+
 <body>
 
     <header>
@@ -146,17 +148,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="js/app.js"></script>
     <script type="module" src="js/reservarTurno.js"></script>
-
-<!-- Verificación: reservarTurno requiere usuario logueado -->
-<script>
-    (function(){
-        const logged = !!(sessionStorage.getItem('username') || localStorage.getItem('userRole'));
-        if (!logged) {
-            // si no está logueado, redirigir al índice (donde está el login)
-            window.location.href = 'index.html';
-        }
-    })();
-</script>
 
 </body>
 
