--- a/reservarTurno.html
+++ b/reservarTurno.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="CSS/styles.css">
 </head>
 
- <!-- Verifica Login --> <script src="./JS/verificarLogin.js"></script>
+ <!-- Verifica Login --> <script src="JS/verificarLogin.js"></script>
 
 <body>
 
