--- a/reservarTurnoSinLogin.html
+++ b/reservarTurnoSinLogin.html
@@ -2,145 +2,149 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reservar Turno - Sin Login</title>
-    <link rel="icon" type="image/png" href="./CSS/imagenes/IDW_S.A1-removebg-preview.png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="CSS/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Reservar Turno - Sin Login</title>
+  <link rel="icon" type="image/png" href="./CSS/imagenes/IDW_S.A1-removebg-preview.png">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="CSS/styles.css">
 </head>
 
 <body>
 
-    <header>
-        <div class="d-flex justify-content-between align-items-center w-100 px-3">
-            <a href="index.html">
-                <img src="./CSS/imagenes/IDW_S.A1-removebg-preview.png" alt="Logo Clinica IDW" style="height: 70px;">
-            </a>
-            <h1 class="mb-0 position-absolute start-50 translate-middle-x text-center">Reservar Turno</h1>
-            <div class="d-flex align-items-center gap-2">
-                <button id="darkModeToggle" class="btn btn-outline-light btn-sm" type="button"
-                    title="Cambiar modo oscuro">
-                    <i class="bi bi-moon-fill" id="darkModeIcon"></i>
-                </button>
-                <button class="navbar-toggler navbar-dark d-lg-none" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNav">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
+  <header>
+    <div class="d-flex justify-content-between align-items-center w-100 px-3">
+      <a href="index.html">
+        <img src="./CSS/imagenes/IDW_S.A1-removebg-preview.png" alt="Logo Clinica IDW" style="height: 70px;">
+      </a>
+      <h1 class="mb-0 position-absolute start-50 translate-middle-x text-center">Reservar Turno</h1>
+      <div class="d-flex align-items-center gap-2">
+        <button id="darkModeToggle" class="btn btn-outline-light btn-sm" type="button" title="Cambiar modo oscuro">
+          <i class="bi bi-moon-fill" id="darkModeIcon"></i>
+        </button>
+        <button class="navbar-toggler navbar-dark d-lg-none" type="button" data-bs-toggle="collapse"
+          data-bs-target="#navbarNav">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+    </div>
+    <div class="collapse navbar-collapse d-lg-block w-100" id="navbarNav">
+      <nav class="d-flex flex-column flex-lg-row justify-content-center align-items-center gap-3 py-2">
+        <a href="index.html" class="nav-link">Inicio</a>
+        <a href="institucional.html" class="nav-link">Institucional</a>
+        <a href="contacto.html" class="nav-link">Contacto</a>
+        <a href="altaMedicos.html" class="nav-link">Alta de Médicos</a>
+        <a href="reservarTurnoSinLogin.html" class="nav-link active">Reservar Turno</a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="container-fluid mt-5 pt-5">
+    <section class="mb-5">
+      <h2 class="text-center mb-4">Reservar Turno</h2>
+      <p class="text-center">Completá el formulario para solicitar tu turno en la Clínica IDW.</p>
+
+      <form id="formReservaTurno" class="row g-3 justify-content-center">
+        <div class="col-md-6">
+          <label for="nombrePaciente" class="form-label">Nombre y Apellido</label>
+          <input type="text" id="nombrePaciente" class="form-control" required>
         </div>
-        <div class="collapse navbar-collapse d-lg-block w-100" id="navbarNav">
-            <nav class="d-flex flex-column flex-lg-row justify-content-center align-items-center gap-3 py-2">
-                <a href="index.html" class="nav-link">Inicio</a>
-                <a href="institucional.html" class="nav-link">Institucional</a>
-                <a href="contacto.html" class="nav-link">Contacto</a>
-                <a href="altaMedicos.html" class="nav-link">Alta de Médicos</a>
-                <a href="reservarTurnoSinLogin.html" class="nav-link">Reservar Turno </a>
-            </nav>
+
+        <div class="col-md-6">
+          <label for="documento" class="form-label">Documento</label>
+          <input type="text" id="documento" class="form-control" required>
         </div>
-    </header>
 
-    <main class="container-fluid mt-5 pt-5">
-        <section class="mb-5">
-            <h2 class="text-center mb-4">Reservar Turno</h2>
-            <p class="text-center">Completá el formulario para solicitar tu turno en la Clínica IDW.</p>
+        <div class="col-md-6">
+          <label for="medico" class="form-label">Médico</label>
+          <select id="medico" class="form-select" required>
+            <option value="">Seleccione...</option>
+          </select>
+        </div>
 
-            <form id="formTurnoPublico" class="row g-3 justify-content-center">
-                <div class="col-md-6">
-                    <label for="nombrePaciente" class="form-label">Nombre y Apellido</label>
-                    <input type="text" id="nombrePaciente" class="form-control" required>
-                </div>
+        <div class="col-md-6">
+          <label for="especialidad" class="form-label">Especialidad</label>
+          <select id="especialidad" class="form-select" required>
+            <option value="">Seleccione...</option>
+          </select>
+        </div>
 
-                <div class="col-md-6">
-                    <label for="medicoTurno" class="form-label">Médico</label>
-                    <select id="medicoTurno" class="form-select" required>
-                        <option value="">Seleccione...</option>
-                    </select>
-                </div>
+        <div class="col-md-6">
+          <label for="obraSocial" class="form-label">Obra Social</label>
+          <select id="obraSocial" class="form-select" required>
+            <option value="">Seleccione...</option>
+          </select>
+        </div>
 
-                <div class="col-md-6">
-                    <label for="especialidadTurno" class="form-label">Especialidad</label>
-                    <select id="especialidadTurno" class="form-select" required>
-                        <option value="">Seleccione...</option>
-                    </select>
-                </div>
+        <div class="col-md-6">
+          <label for="fecha" class="form-label">Fecha</label>
+          <input type="date" id="fecha" class="form-control" required>
+        </div>
 
-                <div class="col-md-6">
-                    <label for="obraSocialTurno" class="form-label">Obra Social</label>
-                    <select id="obraSocialTurno" class="form-select" required>
-                        <option value="">Seleccione...</option>
-                    </select>
-                </div>
+        <div class="col-md-6">
+            <label for="hora" class="form-label">Hora</label>
+            <select id="hora" class="form-select" required>
+                <option value="">Seleccione hora</option>
+            </select>
+        </div>
 
-                <div class="col-md-6">
-                    <label for="fechaTurno" class="form-label">Fecha</label>
-                    <input type="date" id="fechaTurno" class="form-control" required>
-                </div>
+        <div class="col-md-6">
+            <label for="valorConsulta" class="form-label">Valor de consulta ($)</label>
+            <input type="number" id="valorConsulta" class="form-control" readonly>
+        </div>
 
-                <div class="col-md-6">
-                    <label for="horaTurno" class="form-label">Hora</label>
-                    <select id="horaTurno" class="form-select" required>
-                        <option value="">Seleccione...</option>
-                    </select>
-                </div>
+        <div class="col-md-6">
+            <label for="porcentaje" class="form-label">Descuento obra social (%)</label>
+            <input type="number" id="porcentaje" class="form-control" readonly>
+        </div>
 
-                <div class="col-md-4">
-                    <label for="valorConsultaTurno" class="form-label">Valor de consulta ($)</label>
-                    <input type="number" id="valorConsultaTurno" class="form-control" readonly>
-                </div>
+        <div class="col-md-6">
+            <label for="valorFinal" class="form-label">Total a pagar ($)</label>
+            <input type="number" id="valorFinal" class="form-control" readonly>
+        </div>
 
-                <div class="col-md-4">
-                    <label for="porcentajeDescuentoTurno" class="form-label">Descuento obra social (%)</label>
-                    <input type="number" id="porcentajeDescuentoTurno" class="form-control" readonly>
-                </div>
+        <div class="col-12 text-center mt-3">
+          <button type="submit" class="btn btn-sm-primary">Solicitar Turno</button>
+        </div>
 
-                <div class="col-md-4">
-                    <label for="valorFinalTurno" class="form-label">Total a pagar ($)</label>
-                    <input type="number" id="valorFinalTurno" class="form-control" readonly>
-                </div>
+        <div id="mensajeReserva" class="text-center mt-3"></div>
+      </form>
+    </section>
 
-                <div class="col-12 text-center mt-3">
-                    <button type="submit" class="btn btn-sm-primary">Solicitar Turno</button>
-                </div>
+    <section class="row justify-content-center mt-5">
+      <div class="col-md-10">
+        <h2 class="text-center mb-3">Reservas Registradas</h2>
+        <div class="table-responsive">
+          <table class="table table-striped align-middle text-center mx-auto">
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>DNI</th>
+                <th>Nombre y Apellido</th>
+                <th>Médico</th>
+                <th>Especialidad</th>
+                <th>Obra Social</th>
+                <th>Valor Final ($)</th>
+              </tr>
+            </thead>
+            <tbody id="tablaTurnos"></tbody>
+          </table>
+        </div>
+      </div>
+    </section>
+  </main>
 
-                <div id="alertaTurnoPublico" class="text-center mt-3"></div>
-            </form>
-        </section>
+  <footer class="text-center py-3">
+    <a href="https://www.instagram.com">Instagram</a> |
+    <a href="https://www.facebook.com">Facebook</a> |
+    <a href="https://www.x.com">X</a>
+    <p class="mb-0">Desarrollado por Grupo 19 &copy;</p>
+  </footer>
 
-        <section class="row justify-content-center mt-5">
-            <div class="col-md-10">
-                <h2 class="text-center mb-3">Turnos Registrados</h2>
-                <div class="table-responsive">
-                    <table class="table table-striped align-middle text-center mx-auto">
-                        <thead>
-                            <tr>
-                                <th>Paciente</th>
-                                <th>Médico</th>
-                                <th>Especialidad</th>
-                                <th>Obra Social</th>
-                                <th>Fecha</th>
-                                <th>Hora</th>
-                                <th>Precio</th>
-                            </tr>
-                        </thead>
-                        <tbody id="turnosPublicos"></tbody>
-                    </table>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <footer class="text-center py-3">
-        <a href="https://www.instagram.com">Instagram</a> |
-        <a href="https://www.facebook.com">Facebook</a> |
-        <a href="https://www.x.com">X</a>
-        <p class="mb-0">Desarrollado por Grupo 19 &copy;</p>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="js/reservarTurnoSinLogin.js"></script>
-    <script src="js/app.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script type="module" src="js/reservarTurnoSinLogin.js"></script>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
