Actualización obras sociales

--- a/altaMedicos.html
+++ b/altaMedicos.html
@@ -199,7 +199,7 @@
     <form id="formObraSocial" class="mb-3 d-flex gap-2">
       <input type="text" id="nuevaObraSocial" class="form-control" placeholder="Nombre de la obra social">
       <input type="number" id="porcentajeObraSocial" class="form-control" placeholder="% de descuento">
-      <button type="submit" class="btn btn-primary">Agregar / Actualizar</button>
+      <button type="submit" class="btn btn-sm-primary">Agregar</button>
     </form>
 
     <div class="table-responsive">
